resources/ops/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nmrxiv-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nmrxiv-app
  template:
    metadata:
      labels:
        app: nmrxiv-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: logs
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: testing
          emptyDir: {}
        - name: sessions
          emptyDir: {}
        - name: views
          emptyDir: {}
      securityContext:
        fsGroup: 82
      containers:
        - name: nginx
          # imagePullPolicy: Never
          image: eu.gcr.io/nmrxiv/nginx:latest
          resources:
            limits:
              cpu: 500m
              memory: 50M
          ports:
            - containerPort: 80
        - name: php
        #  imagePullPolicy: Never
          securityContext:
            runAsUser: 82
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: logs
              mountPath: /var/www/html/storage/logs
            - name: cache
              mountPath: /var/www/html/storage/framework/cache
            - name: sessions
              mountPath: /var/www/html/storage/framework/sessions
            - name: views
              mountPath: /var/www/html/storage/framework/views
            - name: testing
              mountPath: /var/www/html/storage/framework/testing
          resources: {}
          #image: eu.gcr.io/nmrxiv/app:latest
          image: eu.gcr.io/PROJECT_ID/IMAGE:TAG
          ports:
            - containerPort: 9000
