resources/ops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nmrxiv-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nmrxiv-app
