resources/ops/prod-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.global-static-ip-name: nmrxiv-dev-ip-address
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
      - nmrxiv.org
    # This secret must exist beforehand
    secretName: nmrxiv-app-prod-tls
  rules:
  - host: nmrxiv.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nmrxiv-nmrxiv-app
            port:
              number: 80
